2006-10-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_focus_to_cursor): Ensure the cursor
	row is selected, also in multiple selection mode. NB#41981

2006-10-04  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtkcellview.c (gtk_cell_view_class_init): Remove style_set method,
	seems to be a leftover from when the cellview was a !NO_WINDOW widget.

2006-10-03 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtktreeview.c: (gtk_tree_view_size_request),
	(gtk_tree_view_size_allocate), (validate_visible_area),
	(do_validate_rows), (validate_rows), (validate_rows_handler):

	Revert fix for NB#3490, as it was causing unintended side effects.	

2006-10-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merged small fixes from upstream.

    2005-11-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_motion_resize_column): Another
	erroneous semicolon.

    2005-08-11  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_size_allocate_columns): queue
	a draw for the entire widget if any column changes width. (Fixes
	#311026, reported by Frederic Crozat).

    2005-07-13  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_new_column_width): let's take
	the MIN of width and max_width here, not width and max_width != -1.
	(fixes #144480, reported by Mikael Magnusson).

2006-10-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (update_checkbox_mode): Stop memory leak after
	losing a pointer to list start. NB#41908

2006-09-25  Kristian Rietveld  <kris@imendio.com>

	Sync with upstream.

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_finalize):
	Don't leak default_sort_data.  (#346341, Christian Weiske)

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_finalize):-
	Clean up user data.  (#344624, Christian Weiske)

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_fetch_child):
	update the refs from children to parents for all nodes, since